# chaotic-clean-archi-rust

./: Cargo.toml  README.md  package.json
apps/browser/: package.json
apps/browser/src/: App.tsx  auth.tsx  register.tsx
apps/rest-api/: Cargo.toml  package.json
apps/rest-api/src/: main.rs
