[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
auth-module = { version = "0.1.0", path = "../../packages/auth-module" }
axum = "0.5.17"
kernel = { version = "0.1.0", path = "../../packages/kernel" }
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
